[package]
name = "tspam"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "~0.6"
log = "~0.4"
structopt = "~0.3"
tokio = { version = "0.2.0-alpha.4", default-features = false, features = ["timer", "sync", "net", "rt-full"] }
