[package]
name = "tspam"
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
edition = "2018"
license = "Apache-2.0/MIT"

[dependencies]
env_logger = "~0.6"
err-derive = "~0.1"
log = "~0.4"
net2 = "~0.2"
once_cell = "~1"
structopt = "~0.3"
tokio = { version = "0.2.0-alpha.4", default-features = false, features = ["timer", "sync", "net", "rt-full"] }
